format code and prepare for Quarkus 3.19.3